sua lai footer - css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ a.cart-shopping.pd-28 {
     margin-top: 33px;
     padding-top: 20px;
     width:20%;
-    height: 100%;
+    height: 600px;
     position: fixed ;
     background:#ffffff;  
     text-transform: uppercase;
