--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ body{
 .header {
     width: 100%;
     height: 31.6px;
+    padding: 5px;
     background: #000000;
     color: #ffffff;
     text-align: right;
@@ -48,6 +49,104 @@ body{
     position: fixed ;
    
 }
+
+/*  
+.header-menu{
+
+
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    float: left;
+    position: relative;
+  }
+  
+  nav ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    padding: 0;
+    
+  }
+  
+  nav ul li:hover > ul {
+    display: inherit;
+  }
+  
+  nav ul ul li {
+    float: none;
+    width: 100%;
+    text-align: center;
+    margin-left: 5px;
+  }
+  
+  nav ul ul a {
+    padding: 10px;
+    color: #333;
+    display: block;
+  }
+  
+  nav ul a {
+    padding: 3px;
+    color: #333;
+    text-decoration: none;
+    display: block;
+  }
+  
+  nav ul a:hover {
+    background-color: #f1f1f1;
+  }
+ */
+
+
+  /*  lai */
+  .dropdown {
+    position: relative;
+    display: inline-flex;
+  }
+  
+  .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: inline-flex;
+    flex-direction: column;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+  /* lai */
 
 .logo-header {
     color: #fff;
